2007-06-09  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.c:
	* ilistcreate.c (ilistcreate): move function, and reorganize code.

2007-06-06  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c: clean up code and generally initialize variables.

	* Makefile (install): qemubuilder installed to sbin, since it
	needs root privilege

	* qemubuilder.c (copy_dscfile): support signed .dsc file.

	* parameter.h: 
	* parameter.c: new files, moved common code from cowbuilder/qemubuilder

2007-06-05  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (load_config_file): 
	* qemubuilder.c (load_config_file): set -e in sourcing configuration file.

2007-06-04  Junichi Uekawa  <dancer@debian.org>

	* tests/902_test_cowbuilder_fail.sh, etc.: skip when ran inside
	cowbuilder.

	* qemubuilder.1: document ARCH= option, and 
	add a sample pbuidlerrc

2007-05-28  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.1: document buildresult.
	* cowbuilder.8: 

	* cowbuilder.c: support buildresult

	* qemubuilder.c: support buildresult

2007-05-27  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c: sync twice before shutdown.

	* qemubuilder.1: create from cowbuilder doc.

	* cowbuilder.8: fix doc

	* qemubuilder.c: support INITRD config option.

	* Makefile (install): add install target for qemubuilder.

2007-04-18  Junichi Uekawa  <dancer@debian.org>

	* Makefile: do not install qemubuilder for now.

	* qemubuilder.c (qemubuilder_create): fix deb source line.
	(qemu_arch_qemu): return kvm only when kvm is available.
	make this work with x86_64 host x86_64 target.	

2007-04-05  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c: initial import to cowdancer repository.  rename
	functions to 'qemubuilder_'.
	(qemubuilder_create): add mirror place to call to 'debootstrap
	--second-stage'.

2007-03-08  Junichi Uekawa  <dancer@debian.org>

	* cowdancer.c(ctor): add constructor

	* tests/021_test_open.c (main): C source for testing it.