@@ -1,5 +1,7 @@
 2007-06-09  Junichi Uekawa  <dancer@debian.org>
 
+	* cowbuilder.c: ignore ./home
+
 	* cow-shell.c:
 	* ilistcreate.c (ilistcreate): move function, and reorganize code.
 
